--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@smui-extra/autocomplete": "^7.0.0-beta.0",
 		"@smui-extra/bottom-app-bar": "^7.0.0-beta.0",
 		"@smui/button": "^7.0.0-beta.0",
 		"@smui/card": "^7.0.0-beta.0",
 		"@smui/fab": "^7.0.0-beta.0",
 		"@smui/icon-button": "^7.0.0-beta.0",
+		"@smui/segmented-button": "^7.0.0-beta.0",
 		"@smui/tab": "^7.0.0-beta.0",
 		"@smui/tab-bar": "^7.0.0-beta.0",
+		"@smui/textfield": "^7.0.0-beta.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-static": "^2.0.1",
 		"@sveltejs/kit": "^1.5.0",
