--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@smui-extra/bottom-app-bar": "^7.0.0-beta.0",
 		"@smui/button": "^7.0.0-beta.0",
 		"@smui/card": "^7.0.0-beta.0",
+		"@smui/dialog": "^7.0.0-beta.0",
 		"@smui/fab": "^7.0.0-beta.0",
 		"@smui/icon-button": "^7.0.0-beta.0",
 		"@smui/segmented-button": "^7.0.0-beta.0",
